fix:paragraphed index file, add last step recipe2

--- a/recipes/double_layer_pumkin_pie.html
+++ b/recipes/double_layer_pumkin_pie.html
@@ -33,6 +33,8 @@
             <li>Meanwhile, beat cream cheese, milk and sugar for cheesechake layer ina a large bowl with an electric mixer until smooth. Gently stir in whipped topping.</li>
             <li>Spoon into graham cracker crust and spread into an even layer.</li>
             <li>Spread thickened pumpkin mixture over top.Cover and refrigerate until set, at least 4 hours.</li>
+            <li>Server and enjoy</li>
+
 
         </ol>
     </body>
