--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/braised_beef.html">Braised Beef</a>
-        <a href="recipes/double_layer_pumkin_pie.html">Double Layer Pumpkin Pie</a>
+        <ul>
+            <li><a href="recipes/braised_beef.html">Braised Beef</a></li>
+            <li><a href="recipes/double_layer_pumkin_pie.html">Double Layer Pumpkin Pie</a></li>
+            <li><a href="recipes/easy_meatloaf.html">Easy Meatloaf</a></li>
+        </ul>       
     </body>
 </html> 
