--- a/recipes/braised_beef.html
+++ b/recipes/braised_beef.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Braised Beef</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Braised Beef</h1>
         <img src="../imgs/braisedbeef.jpg" alt="a picture of the finished Braised Beef" height="240">
         <h2>Description</h2>
         <p>Braising is a cooking method that involves slowly cooking meat in a covered pot with some sort of liquid. In the case of this recipe, chuck roast is braised in a mixture of beef broth and red wine. Braising is similar to stewing, but it requires less liquid.</p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li>3 <small>1/2</small> pounds boneless beef chuck roast</li>
             <li>5 teaspoons kosher salt, divided</li>
@@ -28,7 +29,7 @@
             <li>2 cups beef broth, or more as needed</li>
             <li>2 tablespoons chopped fresh parsley</li>
         </ul>
-        <h3>Steps</h3>
+        <h2>Steps</h2>
         <ol>
             <li>Gather all ingredients and preheat the oven to 350 degreesF(175 degrees C)</li>
             <li>Season beef pieces evenly on all sides with 3 1/2 teaspoons salt, 2 teaspoons pepper, and garlic powder</li>
