--- a/recipes/double_layer_pumkin_pie.html
+++ b/recipes/double_layer_pumkin_pie.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Double Layer Pumpkin Pie</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
-        <h1>Double Layer Pumpkin Pie</h1>
+        <h1 class="pumpkin">Double Layer Pumpkin Pie</h1>
         <img src="../imgs/doublelayerpumpkinpie.webp" alt="image of a finished Double Layer Pumpkin Pie" height="240">
         <h2>Description</h2>
         <p>This double layer pumpkin pie combines cheesecake and pumpkin pie on top of a ready-made graham cracker crust to create one delicious desset with two luscious layers- light and fluffy cream cheese and perfectly spiced, creamy pumpkin that's thickened with a pudding mix. Add this easy, no-bake pie to your holiday menu, or serve anytime you're craving a descent treat.</p>
-        <h3>Pumpkin Layer Ingredients</h3>
+        <h2>Pumpkin Layer Ingredients</h2>
         <ul>
             <li>1 cup cold milf</li>
             <li>1(15 ounce) can soled pack pumpkin puree</li>
@@ -18,7 +19,7 @@
             <li><small>1/2</small>teaspoon ground ginger</li>
             <li><small>1/4</small> teaspoons ground cloves</li>
         </ul>
-        <h3>Cheescake Layer Ingredients</h3>
+        <h2>Cheescake Layer Ingredients</h2>
         <ul>
             <li>4 ounces cream cheese, softened</li>
             <li>1 tablespoon milk</li>
