--- a/recipes/easy_meatloaf.html
+++ b/recipes/easy_meatloaf.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Easy Meatloaf</title>
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <h1>Easy Meatloaf</h1>
         <img src="../imgs/easy-meatloaf.webp" alt="picture of finished Easy Meatloaf" height="240"/>
         <h2>Description</h2>
         <p>Meatloaf is a mixture of ground meat (beef, pork, veal) with breadcrumbs, eggs, and spices packed into a small pan and baked until done. </p>
-        <h3>Ingredients</h3>
+        <h2>Ingredients</h2>
         <ul>
             <li>1 <small>1/2</small> Ground Beef</li>
             <li>1 Large Egg</li>
@@ -23,7 +24,7 @@
             <li>2 tablespoons pepper Mustard</li>
 
         </ul>
-        <h3>Steps</h3>
+        <h2>Steps</h2>
         <ol>
             <li> Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan. </li>
             <li> Combine ground beef, onion, milk, bread crumbs, and egg in a large bowl; season with salt and pepper. Transfer into prepared loaf pan. </li>
