--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title >Home Page</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="home_title">Odin Recipes</h1>
+        <ul class="recipe_ul">
             <li><a href="recipes/braised_beef.html">Braised Beef</a></li>
             <li><a href="recipes/double_layer_pumkin_pie.html">Double Layer Pumpkin Pie</a></li>
             <li><a href="recipes/easy_meatloaf.html">Easy Meatloaf</a></li>
